--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "docs:build": "vuepress build content"
   },
   "devDependencies": {
-    "@vuepress/plugin-google-analytics": "^2.0.0-beta.35",
-    "vuepress": "^2.0.0-beta.35"
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.38",
+    "@vueuse/core": "^8.3.1",
+    "vuepress": "^2.0.0-beta.39"
   }
 }
