--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "@vuepress/plugin-google-analytics": "^2.0.0-beta.49",
-    "vuepress": "^2.0.0-beta.49"
+    "vuepress": "^2.0.0-beta.49",
+    "vuepress-plugin-sitemap2": "^2.0.0-beta.87"
   }
 }
