--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
-  },
   "devDependencies": {
-    "@vuepress/plugin-google-analytics": "^2.0.0-beta.49",
-    "vuepress": "^2.0.0-beta.49",
-    "vuepress-plugin-sitemap2": "^2.0.0-beta.87"
+    "sitemap": "^7.1.1",
+    "vitepress": "^1.0.0-beta.3"
+  },
+  "scripts": {
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   }
 }
