--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "devDependencies": {
-    "sitemap": "^7.1.1",
-    "vitepress": "^1.0.0-beta.3"
+    "vitepress": "^1.0.0-rc.40"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
