--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "vitepress": "^1.3.3"
+    "vitepress": "^2.0.0-alpha.13"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
